internal/detect/testdata/namer_validator/invalid_signature/multiple_returns/main.go
package main

type MultiReturn struct{}

func (MultiReturn) Name() (string, error) { return "name", nil }

func main() {}
